# overdub

./: .gitignore  CLAUDE.md  README.md  gradle.properties  settings.gradle.kts
analysis/: README.md  pyproject.toml
analysis/scripts/: analyze_timestamp_multiread.py  census_clipping.py  check_reference_periodicity.py  decompose_offset.py  decompose_timestamp_outlier.py  detect_calibration_click.py  detect_calibration_signal.py  diagnose_ec_residual.py  diagnose_gcc_phat.py  evaluate_alias_gate.py  inspect_wav.py  measure_main_lobe_width.py  mix_calibration_signal.py  pc_loopback_check.py  prepend_calibration_click.py  probe_agc.py  render_bleed_mix.py  resample_wav.py  run_bandlimited_gcc_phat_sweep.py  run_click_gated_sweep.py  run_echo_cancel_eval.py  run_gcc_phat_sweep.py  run_loopback_click_offset.py  run_multihop_simulation.py  run_vocal_injection.py  sweep_snr_floor.py  sweep_snr_floor_real_reference.py  validate_calibration_candidates.py  vet_vocal_take.py
analysis/src/overdub_analysis/: __init__.py  bleed_mix.py  calibration_candidates.py  calibration_click.py  echo_cancel.py  gcc_phat.py  leak_detect.py  multihop.py  offset_decompose.py  pc_loopback.py  synth.py  timestamp_decompose.py  timestamp_multiread.py  vocal_inject.py
analysis/tests/: test_bleed_mix.py  test_calibration_candidates.py  test_calibration_click.py  test_echo_cancel.py  test_gcc_phat.py  test_leak_detect.py  test_multihop.py  test_offset_decompose.py  test_pc_loopback.py  test_sanity.py  test_synth.py  test_timestamp_decompose.py  test_timestamp_multiread.py  test_vocal_inject.py
doc/: design-summary.md  prototype-plan.md  review-20260705-093038.md  test2-step2-plan.md  (+2 more)
harness/src/main/cpp/: CMakeLists.txt  native_bridge.cpp  native_engine.cpp  native_engine.h
(+34 files in other folders)
