[project]
name = "overdub-analysis"
version = "0.1.0"
description = "Offline signal-processing validation (GCC-PHAT alignment) for the Overdub app — see ../doc/prototype-plan.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scipy",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
